Styling Tile & Price

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -2,6 +2,23 @@
 @require "./base"
 @require "./user"
 
+
+$primary = #00c58e
 .slide1
-    background-color:#00c58e;
-    color: white;
+    background-color:$primary
+    color: white
+    justify-content center
+    position: absolute
+    padding-top: 0;
+
+.price
+    padding: 5px 20px
+    margin-top: 15px
+    background-color: $primary
+    font-size: 40pt
+    font-weight: bold
+    color: white
+.title
+    border-left: 10px solid $primary
+    margin-bottom: 0
+    padding-left: 10px
