Update slide dan page styling

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -10,14 +10,18 @@ $primary = #00c58e
     justify-content center
     position: absolute
     padding-top: 0;
-
-.price
-    padding: 5px 20px
-    margin-top: 15px
-    background-color: $primary
-    font-size: 40pt
-    font-weight: bold
-    color: white
+.slide1 h1
+    text-align :center;
+ul.build li span 
+    font-weight :bold;
+.tag
+    margin-top 10%
+    border :3px dotted #979797
+    color #4262ab
+    border-radius: 10px
+    padding : 10px
+    font-weight bold
+    font-size 35pt
 .title
     border-left: 10px solid $primary
     margin-bottom: 0
